Added a todo for the database stored procedure update. Need to fix daily updates. Done for the night

--- a/mysqlTester.ipynb
+++ b/mysqlTester.ipynb
@@ -478,6 +478,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "TODO:\n",
+    "  Recreate item insert to create a table that stores main data. \n",
+    "    (Like correcting release dates. And such since some store datas have 0's as the data)\n",
+    "    - Create a table that only stores the games input, pricing, and update times and reviews. \n",
+    "    - Make this table check to make sure this game hasn't already been stored today.\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
     "\n",
     "\n",
     "\"\"\"copy of the stored procedure BECAUSE CPANEL DOESNT LET ME VIEW IT!\n",
