More changes to sql

--- a/mysqlTester.ipynb
+++ b/mysqlTester.ipynb
@@ -439,14 +439,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gameKey=@gameKey, storeID=@storeID, title=@title, gameID=@gameID, salePrice=@salePrice, salePrice=@salePrice, isOnSale=@isOnSale, metacriticScore=@metacriticScore, steamRatingText=@steamRatingText, steamRatingPercent=@steamRatingPercent, steamRatingCount=@steamRatingCount, releaseDate=@releaseDate, lastChange=@lastChange, thumb=@thumb, "
+      "gameKey=@gameKey, storeID=@storeID, title=@title, gameID=@gameID, salePrice=@salePrice, normalPrice=@normalPrice, isOnSale=@isOnSale, metacriticScore=@metacriticScore, steamRatingText=@steamRatingText, steamRatingPercent=@steamRatingPercent, steamRatingCount=@steamRatingCount, releaseDate=@releaseDate, lastChange=@lastChange, thumb=@thumb, "
      ]
     }
    ],
@@ -464,8 +464,8 @@
     "        \"steamRatingText\" : (\"steamRatingText\", str),\n",
     "        \"steamRatingPercent\" : (\"steamRatingPercent\", int),\n",
     "        \"steamRatingCount\" : (\"steamRatingCount\", int),\n",
-    "        \"releaseDate\" : (\"releaseDate\", str),\n",
-    "        \"lastChange\" : (\"lastChange\", str),\n",
+    "        \"releaseDate\" : (\"releaseDate\", int),\n",
+    "        \"lastChange\" : (\"lastChange\", int),\n",
     "        \"thumb\" : (\"thumb\", str)\n",
     "    }\n",
     "for (key, _) in convertDict.values():\n",
